--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,26 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Change board name
+CONFIG_ZMK_KEYBOARD_NAME="PopPOloPoPpo"
+
+# Set deep sleep to 30 minutes
+CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+
+# Debug
+CONFIG_ZMK_USB_LOGGING=n
+
+# Default widget
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+
+# Make bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# No WPM widget
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
