--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,14 +16,20 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_ZMK_USB_LOGGING=n
 
 # Default widget
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+
+# Bigger font size
+#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
 # Make bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # No WPM widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
+
+# Use a dedicated thread for UI updates
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# Show battery percentage instead of icon
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
