--- a/config/corne.conf
+++ b/config/corne.conf
@@ -19,8 +19,8 @@ CONFIG_ZMK_USB_LOGGING=n
 #CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Bigger font size
-#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
 # Make bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
@@ -32,4 +32,4 @@ CONFIG_ZMK_WIDGET_WPM_STATUS=n
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
 # Show battery percentage instead of icon
-#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
