--- a/config/corne.conf
+++ b/config/corne.conf
@@ -16,7 +16,7 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_ZMK_USB_LOGGING=n
 
 # Default widget
-#CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Bigger font size
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
