--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,7 +23,7 @@ CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
 # Make bluetooth stronger
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+#CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # No WPM widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
