--- a/config/corne.conf
+++ b/config/corne.conf
@@ -15,6 +15,11 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 # Debug
 CONFIG_ZMK_USB_LOGGING=n
 
+# Make bluetooth stronger
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# Should improve bluetooth stability
+CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+
 # Default widget0
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
@@ -22,8 +27,6 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
-# Make bluetooth stronger
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # No WPM widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
