Enable back default widgets (daddy needs some eye cany)

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -24,15 +24,17 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Bigger font size
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
 
-# No WPM widget
-CONFIG_ZMK_WIDGET_WPM_STATUS=n
+# Enable WPM widget
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# Enable layer status widget
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
 # Use a dedicated thread for UI updates
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
 # Show battery percentage instead of icon
-CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
