Report both keyboard battery levels on host system when using BLE

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -20,6 +20,9 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Should improve bluetooth stability
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 
+# Report both keyboards battery levels on host system
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 # Default widget0
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
