Enable alpha support for new Zmk Studio tool

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -23,6 +23,10 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 # Report both keyboards battery levels on host system
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
+
+# Experimental zmk studio support
+CONFIG_ZMK_STUDIO=y
+
 # Default widget0
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
