Trying to get back eye candy widgets
Enabling WPM seems to have disabled the nice widgets I was looking for

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -31,12 +31,11 @@ CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
 # Bigger font size
-#CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
-#CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
-
-# Enable WPM widget
-CONFIG_ZMK_WIDGET_WPM_STATUS=y
+# Disable WPM widget
+CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # Enable layer status widget
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
 
