Disable bluetooth passkey entry
omagad, what did I do

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -18,7 +18,9 @@ CONFIG_ZMK_USB_LOGGING=n
 # Make bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Should improve bluetooth stability
-CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+#CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=n # this one is too invasive for me, no thanks
 
 # Report both keyboards battery levels on host system
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
