Temporarly disable Zmk Studio Locking
since Zmk online keymap editor does not handle yet new Zmk studio behaviors

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -28,6 +28,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
 # Experimental zmk studio support
 CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n # no unlock key for Zmk Studio
 
 # Default widget0
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
