Tweak again the widgets for eye candy

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -30,6 +30,9 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n # no unlock key for Zmk Studio
 
+# Use a dedicated thread for UI updates
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+
 # Default widget0
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 
@@ -37,13 +40,13 @@ CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
-# Disable WPM widget
+# Disable Word-Per-Minute widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # Enable layer status widget
 CONFIG_ZMK_WIDGET_LAYER_STATUS=y
-
-# Use a dedicated thread for UI updates
-CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
-
+# Enable battery status widget
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 # Show battery percentage instead of icon
-#CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+# Enable keystroke output
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
