--- a/config/corne.conf
+++ b/config/corne.conf
@@ -33,8 +33,11 @@ CONFIG_ZMK_STUDIO_LOCKING=n # no unlock key for Zmk Studio
 # Use a dedicated thread for UI updates
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
-# Default widget0
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+CONFIG_ZMK_DISPLAY=y
+# Default widgets
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+# Nice epaper widgets
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # Bigger font size
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
