Disable builtin screen widgets (trying to fix compilation).

--- a/config/west.yml
+++ b/config/west.yml
@@ -1,8 +1,7 @@
 manifest:
   remotes:
     - name: zmkfirmware
-      url-base:
-        https://github.com/zmkfirmware
+      url-base: https://github.com/zmkfirmware
     # support nice_oled and nice_epaper
     - name: mctechnology17
       url-base: https://github.com/mctechnology17
