--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,7 +7,7 @@ CONFIG_ZMK_KEYBOARD_NAME="PopPOloPoPpo"
 
 # Set deep sleep to 30 minutes
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=240000
 
 # Debug
 CONFIG_ZMK_USB_LOGGING=n
@@ -35,6 +35,11 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
 # Nice epaper widgets
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Save some battery on animations
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=9600
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=3000
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ANIMATION_MS=3000
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA_ANIMATION_MS=3000
 
 # Bigger font size
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
