Add latency improvements (and organized corne.conf)

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,17 +1,22 @@
+
+# Change board name
+CONFIG_ZMK_KEYBOARD_NAME="PopPOloPoPpo"
+# Debug
+CONFIG_ZMK_USB_LOGGING=n
+
 # Uncomment the following lines to enable the Corne RGB Underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Change board name
-CONFIG_ZMK_KEYBOARD_NAME="PopPOloPoPpo"
-
+### Battery settings
 # Set deep sleep to 30 minutes
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=240000
+# Report both keyboards battery levels on host system
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 
-# Debug
-CONFIG_ZMK_USB_LOGGING=n
-
+### Bluetooth settings
 # Make bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Should improve bluetooth stability
@@ -19,32 +24,19 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_SEC=n # this one is too invasive for me, no thanks
 
-# Report both keyboards battery levels on host system
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
-CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
-
-# Experimental zmk studio support
+### Experimental zmk studio support
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n # no unlock key for Zmk Studio
 
-# Use a dedicated thread for UI updates
+### Use a dedicated thread for UI updates
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 
+### Default widgets
 CONFIG_ZMK_DISPLAY=y
-# Default widgets
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=n
-# Nice epaper widgets
-CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
-# Save some battery on animations
-CONFIG_NICE_OLED_GEM_ANIMATION_MS=9600
-CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=3000
-CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ANIMATION_MS=3000
-CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA_ANIMATION_MS=3000
-
 # Bigger font size
 CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
-
 # Disable Word-Per-Minute widget
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
 # Enable layer status widget
@@ -55,3 +47,24 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=n
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=n
 # Enable keystroke output
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=n
+
+### HID para nice!view ePaperDisplay
+# Enable eager debouncing
+# "Eager Debouncing"
+# Trying to lower the input lag.
+# ref: https://github.com/mctechnology17/zmk-config/blob/main/config/corne.conf
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
+
+### Improves compatibility with iPad
+# ref: https://zmk.dev/docs/config/system#hid
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+### Nice epaper widgets
+# ref: https://github.com/mctechnology17/zmk-nice-oled
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+# Save some battery on animations
+CONFIG_NICE_OLED_GEM_ANIMATION_MS=9600
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA_ANIMATION_MS=3000
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA_ANIMATION_MS=3000
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA_ANIMATION_MS=3000
