Disable basic usage for ipad compatibility
Since it also disables media keys

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -58,7 +58,8 @@ CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
 
 ### Improves compatibility with iPad
 # ref: https://zmk.dev/docs/config/system#hid
-CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+# NOTE: REMOVED, since it disables the media keys
+# CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
 ### Nice epaper widgets
 # ref: https://github.com/mctechnology17/zmk-nice-oled
