Raise deep sleep from 4 to ~16 minutes

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,9 +9,9 @@ CONFIG_ZMK_USB_LOGGING=n
 # CONFIG_WS2812_STRIP=y
 
 ### Battery settings
-# Set deep sleep to 30 minutes
+# Set deep sleep to ~16 minutes
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=240000
+CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1000000
 # Report both keyboards battery levels on host system
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
