--- a/config/corne.conf
+++ b/config/corne.conf
@@ -12,6 +12,9 @@ CONFIG_ZMK_USB_LOGGING=n
 # Set deep sleep to ~16 minutes
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1000000
+# Enable battery level reporting, every 3 minutes
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=180
 # Report both keyboards battery levels on host system
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
